# GuardDuty-SOAR

./: .env.example  .gitignore  CHANGELOG.md  README.md  gd.cfg  gd.test.cfg.example  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md  SUMMARY.md  actions.md  configurations.md  ec2_actions.md  ec2_playbooks.md  extending_with_plugins.md  iam_actions.md  iam_playbooks.md  index.md  notifications.md  playbooks.md  preparing_deployment.md  preparing_testing.md  prod_configurations.md  prod_permissions.md  pull_request_checklist.md  s3_actions.md  s3_playbooks.md  test_configurations.md
docs/architecture/: overview.md  the-engine.md
docs/concepts/: README.md  actions.md  configurations.md  playbooks.md
docs/getting-started/: README.md  configuratio.md  configuration.md  configurations.md  iam-permissions.md  installation.md  notifications.md  preparing-guardduty-soar-for-deployment.md  required-iam-permissions-for-lambda.md
docs/playbooks/: README.md
docs/reference/: README.md
docs/reference/actions/: README.md  ec2.md  iam.md
docs/reference/playbooks/: README.md  ec2.md  iam.md
docs/testing-and-development/: README.md  preparing-guardduty-soar-for-testing.md  pull-request-checklist.md  resources-needed-for-testing..md  testing-configurations.md  testing-setup.md
docs/testing-and-development-1/: testing-setup.md
samples/: Credential-Access-IAM-Anomalous-Behavior.json  Discovery-RDS-Tor-Ip-Caller.json  Recon-EC2-PortProbeEMRUnprotectedPort.json  Recon-EC2-PortProbeUnprotectedPort.json  Recon-EC2-Portscan.json  Trojan-EC2-BlackholeTraffic.json  Trojan-EC2-DGADomainRequest-B.json  Trojan-EC2-DNSDataExfiltration.json  Trojan-EC2-DropPoint.json  UnauthorizedAccess-EC2-MaliciousIPCaller.json  UnauthorizedAccess-EC2-MetadataDNSRebind.json  UnauthorizedAccess-EC2-RDPBruteForce.json  UnauthorizedAccess-EC2-SSHBruteForce.json  UnauthorizedAccess-EC2-TorClient.json  UnauthorizedAccess-EC2-TorRelay.json
src/guardduty_soar/: __init__.py  config.py  engine.py  exceptions.py  main.py  models.py  playbook_registry.py  schemas.py
src/guardduty_soar/actions/: base.py
src/guardduty_soar/actions/ec2/: tag.py  (+8 more)
src/guardduty_soar/notifications/: manager.py
tests/: conftest.py  test_config.py  test_engine.py  test_main.py  test_playbook_registry.py  test_schema.py
tests/actions/ec2/: test_block.py  test_enrich.py  test_isolate.py  test_quarantine.py  test_remove.py  test_snapshot.py  test_tag.py  test_terminate.py
tests/actions/iam/: test_analyze.py  test_details.py  test_history.py  test_identify.py  test_quarantine.py  test_tag.py
tests/actions/notifications/: test_ses.py  test_sns.py
tests/actions/rds/: test_enrich.py  test_gather.py  test_identify.py  test_modify.py  test_tag.py
tests/actions/s3/: test_block.py  test_enrich.py  test_tag.py
tests/e2e/ec2/: test_e2e_ec2_brute_force.py  test_e2e_ec2_credential_exfiltration.py  test_e2e_ec2_instance_compromise.py  test_e2e_ec2_unprotected_port.py
tests/e2e/iam/: test_e2e_forensics_playbook.py
tests/e2e/s3/: test_e2e_s3_bucket_exposure.py  test_e2e_s3_compromised_discovery.py  test_e2e_s3_data_loss_prevention.py
tests/integrations/: test_ec2_actions.py  test_ses.py
tests/integrations/ec2/: test_ec2_actions.py
tests/integrations/iam/: test_iam_actions.py
tests/notifications/: test_manager.py
(+97 files in other folders)
