[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guardduty-soar"
version = "0.1.0"
description = "A serverless SOAR framework for automated AWS GuardDuty finding remediation."
readme = "README.md"
authors = [
    { name = "Andrew McKenzie", email = "mckenzie.andrew@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.20.0",
    "boto3>=1.40.43",
    "boto3-stubs>=1.40.43",
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "pydantic>=2.11.10",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[essential]",
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-mock",
    "types-markdown",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires AWS credentials)",
    "e2e: marks tests as end-to-end tests (requires AWS credentials)"
]
