[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guardduty-soar"
version = "0.14.0"
description = "A serverless SOAR framework for automated AWS GuardDuty finding remediation."
readme = "README.md"
authors = [
    { name = "Andrew McKenzie", email = "mckenzie.andrew@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.20.0",
    "boto3>=1.40.43",
    "boto3-stubs>=1.40.43",
    "jinja2>=3.1.6",
    "pydantic>=2.11.10",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[essential]",
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-mock",
    "types-markdown",
    "pytest-dotenv",
    "ghp-import",
    "mergedeep",
    "mkdocs",
    "mkdocs-get-deps",
    "pyyaml",
    "pyyaml-env-tag",
    "watchdog",
    "babel",
    "backrefs",
    "certifi",
    "charset-normalizer",
    "idna",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "paginate",
    "pymdown-extensions",
    "requests",
    "bandit",
    "safety"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
guardduty_soar = [
    "templates/**/*",
    "plugins/**/*.example"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires AWS credentials)",
    "e2e: marks tests as end-to-end tests (requires AWS credentials)"
]
